[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/CityMap/Pickups/Pickup.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/CityMap/Pickups/Traffic.gd" type="Script" id=2]
[ext_resource path="res://assets/images/light_mask_iso_big.png" type="Texture" id=3]
[ext_resource path="res://assets/images/traffic_light.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "_reset"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "flicker"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.9, 1.1, 1.0, 0.9, 1.05, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "_reset"
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "show"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[node name="Traffic" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
modulate = Color( 1, 1, 1, 0 )
light_mask = 0
position = Vector2( 0, -5 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="Sprite" index="0"]
texture = ExtResource( 3 )
texture_scale = 2.0
color = Color( 0.152941, 0.0509804, 0.301961, 1 )
energy = 0.0

[node name="CooldownTimer" type="Timer" parent="." index="2"]
wait_time = 3.0

[node name="StopTimer" type="Timer" parent="." index="3"]
wait_time = 2.5
one_shot = true

[node name="LightAnimation" type="AnimationPlayer" parent="." index="4"]
anims/_reset = SubResource( 1 )
anims/flicker = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/_reset = SubResource( 3 )
anims/show = SubResource( 4 )
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
